# deepcloak

./: .dockerignore  .gitignore  Dockerfile.ubi  README.ko.md  README.md  README.zh-CN.md  health_server.py  poc-report.md  poc_test.py  pyproject.toml
.autopoc/blog/: final.md  seo.md
.github/workflows/: ci.yml
docs/media/: demo.cast
kubernetes/: deployment.yaml  namespace.yaml  service.yaml
showcase/: package-lock.json  package.json  tailwind.config.ts
showcase/app/: globals.css  layout.tsx  page.tsx
showcase/components/: CosmicGlobe.tsx
showcase/data/: evidence.json
showcase/sample/video/: page@151aa394714d0e717f7c812242188466.webm
skill/: SKILL.md
src/deepcloak/: __init__.py  bot_wall_detector.py  cli.py  config.py  ldr_shim.py  progress.py  research_core.py  retriever.py  setup.py
tests/: test_bot_wall_detector.py  test_cli.py  test_config.py  test_ldr_shim.py  test_progress.py  test_research_core.py  test_setup.py
tests/fixtures/botwalls/: cloudflare_challenge.html  datadome.html  normal.html  recaptcha.html  turnstile.html
